--- a/index.html
+++ b/index.html
@@ -272,8 +272,8 @@
                                     <p>Hinterland - Real Estate Site Redesign</p>
                                 </div>
                                 <div class="funtion">
-                                    <p>Figma</p>
-                                    <p>JavaScript</p>
+                                    <p>Reactjs</p>
+                                    <p>NextJs</p>
                                 </div>
                             </div>
                         </div>
@@ -285,6 +285,7 @@
                                 </div>
                                 <div class="funtion">
                                     <p>Html</p>
+                                    <p>Scss</p>
                                     <p>JavaScript</p>
                                 </div>
                             </div>
