--- a/index.html
+++ b/index.html
@@ -154,11 +154,11 @@
                     <div class="col-lg-8">
                         <div class="content">
                             <div class="top-content">
-                                <h3>Who i am?</h3>
+                                <h3>Introduce ?</h3>
                                 <h2>I'm Sang , a Front End Developer <br /></h2>
                                 <ul>
                                     <li>First learn the rules then study the literature.</li>
-                                    <li>I'm realy interest in front-end development in particular and programming in general.</li>
+                                    <li>I'm really interest in front-end development in particular and programming in general.</li>
                                     <li>I have determination and effort in my life and commitment to my work..</li>
                                 </ul>
                             </div>
