--- a/index.html
+++ b/index.html
@@ -157,9 +157,10 @@
                                 <h3>Introduce ?</h3>
                                 <h2>I'm Sang , a Front End Developer <br /></h2>
                                 <ul>
-                                    <li>First learn the rules then study the literature.</li>
-                                    <li>I'm really interest in front-end development in particular and programming in general.</li>
-                                    <li>I have determination and effort in my life and commitment to my work..</li>
+                                    <li>My name is Sang and I work as a Front End Developer. Let me know if you need any assistance in that area.</li>
+                                    <li>First, learn the rules then study the literature.</li>
+                                    <li>I'm interested in front-end development in particular and programming in general.</li>
+                                    <li>I have determination and effort in my life and commitment to my work.</li>
                                 </ul>
                             </div>
                             <div class="bot-content">
@@ -260,8 +261,8 @@
                                 <div class="funtion">
                                     <p>ReactJs</p>
                                     <p>Tailwind</p>
-                                    <p>Redux tollkit</p>
-                                    <p>Fire Base</p>
+                                    <p>Redux-toolkit</p>
+                                    <p>FireBase</p>
                                 </div>
                             </div>
                         </div>
@@ -269,7 +270,7 @@
                             <div class="thumb-port active" data-link="https://carhub-v32v-b7ft72po6-sangnguyen201.vercel.app/">
                                 <div class="thumb"><img src="img/collect-2.jpg.png" alt="" /></div>
                                 <div class="content">
-                                    <p>Hinterland - Real Estate Site Redesign</p>
+                                    <p>LandingPage Carhub</p>
                                 </div>
                                 <div class="funtion">
                                     <p>Reactjs</p>
@@ -281,7 +282,7 @@
                             <div class="thumb-port active" data-link="https://sangnguyen201.github.io/Movie_FilmLane/">
                                 <div class="thumb"><img src="img/collect-4.jpg.png" alt="" /></div>
                                 <div class="content">
-                                    <p>Hinterland - Real Estate Site Redesign</p>
+                                    <p>LandingPage Movie</p>
                                 </div>
                                 <div class="funtion">
                                     <p>Html</p>
